have cards somewhat aligned with grid, styling issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,3 @@
-
 .HeaderBanner{
   background-color: black;
   justify-content: space-between;
@@ -17,7 +16,10 @@
   background-color: black;
   color: white;
 }
-
+#gridContainer{
+  color: rgba(0, 0, 0, 1);
+  opacity: 1;
+}
 #mainTitle{
   text-align: left;
   margin-left: 80px;
@@ -26,9 +28,15 @@
   font-family: sans-serif;
   color: rgb(255, 255, 255);
 }
+.card{
+  opacity: 1 !important;
+  padding: 2px;
+  margin: 12px;
+}
+
 .cardContainer{
-  background-color: rgb(34, 34, 34);
-  border: 1px solid white;
+  background-color: rgb(56, 56, 56);
+  border: 1px solid rgb(230, 230, 230);
   margin: 15px;
   min-height: 50px;
   opacity: .8;
@@ -46,7 +54,12 @@ img{
   opacity: .5;
 }
 body{
-  background-color: rgb(0, 0, 0);
-
+  background-image: url(./bodyBackground.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  margin-bottom: 0;
+  padding-bottom: 0;
   overflow-y: hidden;
+  overflow-x: hidden;
+
 }
